# jellyfin-utils

./: .gitignore  README.md  pyproject.toml
src/jellyfin_utils/: JellyFinAdapter.py  JellyfinConfigFactory.py  JellyfinRequestAdapter.py  __init__.py
