[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfin-utils"
version = "1.6.1"
description = "Set of utils for working with Jellyfin as a python library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }
authors = [
    { name = "bitwrestler" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "License :: Public Domain",
]
dependencies = [
    "requests>=2.30",
]

[tool.setuptools.packages.find]
where = ["src"]
